fixed the horizontal scrolling problem

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -5,13 +5,19 @@ $darkBlueColor: #002f6c;
 $primaryOrangeColor: #ff6e40;
 $lightOragneColor: #ffa06d;
 $darkOrangeColor: #c53d13;
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+.home-element{
+   max-width: 100vw;
+}
 .overlay{
   position: absolute;
   top: 0;
   left: 0;
   height: 91vh;
-  width: 100vw;
+  max-width: 100vw;
   display: block;
   background-color: black;
   opacity: 0.5;
@@ -21,6 +27,7 @@ $darkOrangeColor: #c53d13;
 .Particles{
     background-color: #002f6c;
     height: 91vh;
+    max-width: 100vw;
 }
 
 .home-top-text{
